# clr-power-tweaks

./: .gitignore  Makefile.am  README  README.md  clr-power-rfkill.service  clr-power-tweaks.conf  clr-power-tweaks.conf.5  clr-power-vm.service  clr-power.service  clr-power.timer  clr_power.1  configure.ac  generate-tweaks.pl  template
include/: clr_power.h  pci-good.h  usb-good.h
man/: clr-power-tweaks.conf.5  clr-power-tweaks.conf.5.md  clr_power.1  clr_power.1.md
src/: cpu.c  data.h  ethernet.c  gfx.c  lib.c  main.c  mm.c  pci.c  sata.c  sched.c  server.c  usb.c  verifytime.c  vm.c  watchdog.c
